- almost functional registration and login

--- a/backend/templates/auth-register.html
+++ b/backend/templates/auth-register.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login - Mazer Admin Dashboard</title>
+    <title>Register - Mazer Admin Dashboard</title>
     
     
     
@@ -23,12 +23,18 @@
     <div class="col-lg-5 col-12">
         <div id="auth-left">
             <div class="auth-logo">
-                <a href="./"><img src="./assets/compiled/svg/logo.svg" alt="Logo"></a>
+                <a href="index.html"><img src="./assets/compiled/svg/logo.svg" alt="Logo"></a>
             </div>
-            <h1 class="auth-title">Log in.</h1>
-            <p class="auth-subtitle mb-5">Log in with your data that you entered during registration.</p>
+            <h1 class="auth-title">Sign Up</h1>
+            <p class="auth-subtitle mb-5">Input your data to register to our website.</p>
 
-            <form method="post" action="./login">
+            <form method="post" action="./register">
+                <div class="form-group position-relative has-icon-left mb-4">
+                    <input type="text" name="name" class="form-control form-control-xl" placeholder="Your Name">
+                    <div class="form-control-icon">
+                        <i class="bi bi-person-badge"></i>
+                    </div>
+                </div>
                 <div class="form-group position-relative has-icon-left mb-4">
                     <input type="text" name="account" class="form-control form-control-xl" placeholder="Account">
                     <div class="form-control-icon">
@@ -41,11 +47,17 @@
                         <i class="bi bi-shield-lock"></i>
                     </div>
                 </div>
-                <button class="btn btn-primary btn-block btn-lg shadow-lg mt-5">Log in</button>
+                <div class="form-group position-relative has-icon-left mb-4">
+                    <input type="password" name="password2" class="form-control form-control-xl" placeholder="Confirm Password">
+                    <div class="form-control-icon">
+                        <i class="bi bi-shield-lock"></i>
+                    </div>
+                </div>
+                <button class="btn btn-primary btn-block btn-lg shadow-lg mt-5">Sign Up</button>
             </form>
             <div class="text-center mt-5 text-lg fs-4">
-                <p class="text-gray-600">Don't have an account? <a href="./register" class="font-bold">Sign
-                        up</a>.</p>
+                <p class='text-gray-600'>Already have an account? <a href="./login" class="font-bold">Log
+                        in</a>.</p>
             </div>
         </div>
     </div>
