--- a/backend/templates/footer.html
+++ b/backend/templates/footer.html
@@ -14,15 +14,15 @@
 </footer>
 </div>
 </div>
-<script src="assets/static/js/components/dark.js"></script>
-<script src="assets/static/js/pages/horizontal-layout.js"></script>
-<script src="assets/extensions/perfect-scrollbar/perfect-scrollbar.min.js"></script>
+<script src="/assets/static/js/components/dark.js"></script>
+<script src="/assets/static/js/pages/horizontal-layout.js"></script>
+<script src="/assets/extensions/perfect-scrollbar/perfect-scrollbar.min.js"></script>
 
-<script src="assets/compiled/js/app.js"></script>
+<script src="/assets/compiled/js/app.js"></script>
 
 
-<script src="assets/extensions/apexcharts/apexcharts.min.js"></script>
-<script src="assets/static/js/pages/dashboard.js"></script>
+<script src="/assets/extensions/apexcharts/apexcharts.min.js"></script>
+<script src="/assets/static/js/pages/dashboard.js"></script>
 
 </body>
 
