--- a/backend/templates/header.html
+++ b/backend/templates/header.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-<script src="assets/static/js/initTheme.js"></script>
+<script src="/assets/static/js/initTheme.js"></script>
 <div id="app">
     <div id="main" class="layout-horizontal">
         <header class="mb-5">
@@ -36,7 +36,7 @@
                                class="user-dropdown d-flex align-items-center dropend dropdown-toggle "
                                data-bs-toggle="dropdown" aria-expanded="false">
                                 <div class="avatar avatar-md2">
-                                    <img src="./assets/compiled/jpg/1.jpg" alt="Avatar">
+                                    <img src="/assets/compiled/jpg/1.jpg" alt="Avatar">
                                 </div>
                                 <div class="text">
                                     <h6 class="user-dropdown-name">$user.name</h6>
@@ -56,7 +56,7 @@
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="./logout">Logout</a></li>
+                                <li><a class="dropdown-item" href="/logout">Logout</a></li>
                             </ul>
                         </div>
 
@@ -74,7 +74,7 @@
 
                         <li
                                 class="menu-item  ">
-                            <a href="./" class='menu-link'>
+                            <a href="/" class='menu-link'>
                                 <span><i class="bi bi-grid-fill"></i> Dashboard</span>
                             </a>
                         </li>
