--- a/backend/templates/footer.html
+++ b/backend/templates/footer.html
@@ -3,11 +3,10 @@
     <div class="container">
         <div class="footer clearfix mb-0 text-muted">
             <div class="float-start">
-                <p>2023 &copy; Mazer</p>
+                <p>2024 &copy; Survey</p>
             </div>
             <div class="float-end">
-                <p>Crafted with <span class="text-danger"><i class="bi bi-heart"></i></span> by <a
-                        href="https://saugi.me">Saugi</a></p>
+                <p>Created by Viktor Kerezov</p>
             </div>
         </div>
     </div>
