--- a/backend/templates/survey-list.html
+++ b/backend/templates/survey-list.html
@@ -20,7 +20,7 @@
                             <tr>
                                 <th>ID</th>
                                 <th>NAME</th>
-                                <th>ACTION</th>
+                                <th>ACTIONS</th>
                             </tr>
                             </thead>
                             <tbody>
