- creating survey, cascade deletion

--- a/backend/templates/header.html
+++ b/backend/templates/header.html
@@ -86,7 +86,7 @@
 
                                         <li class="subsubmenu-item ">
                                             <a href="/survey/create"
-                                               class="subsubmenu-link">Create</a>
+                                               class="subsubmenu-link">Create new</a>
                                         </li>
                                     </ul>
                                 </div>
