--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -15,7 +15,7 @@
                         <div class="card">
                             <div class="card-body px-4 py-4-5">
                                 <div class="row">
-                                    <div class="col-md-8 col-lg-12 col-xl-12 col-xxl-7">
+                                    <div class="col-md-12 col-lg-12 col-xl-12 col-xxl-12">
                                         <h6 class="text-muted font-semibold">Surveys</h6>
                                         <h6 class="font-extrabold mb-0">$dashboard.surveys</h6>
                                     </div>
@@ -27,7 +27,7 @@
                         <div class="card">
                             <div class="card-body px-4 py-4-5">
                                 <div class="row">
-                                    <div class="col-md-8 col-lg-12 col-xl-12 col-xxl-7">
+                                    <div class="col-md-12 col-lg-12 col-xl-12 col-xxl-12">
                                         <h6 class="text-muted font-semibold">Questions</h6>
                                         <h6 class="font-extrabold mb-0">$dashboard.questions</h6>
                                     </div>
@@ -39,7 +39,7 @@
                         <div class="card">
                             <div class="card-body px-4 py-4-5">
                                 <div class="row">
-                                    <div class="col-md-8 col-lg-12 col-xl-12 col-xxl-7">
+                                    <div class="col-md-12 col-lg-12 col-xl-12 col-xxl-12">
                                         <h6 class="text-muted font-semibold">Answers</h6>
                                         <h6 class="font-extrabold mb-0">$dashboard.answers</h6>
                                     </div>
@@ -51,8 +51,8 @@
                         <div class="card">
                             <div class="card-body px-4 py-4-5">
                                 <div class="row">
-                                    <div class="col-md-8 col-lg-12 col-xl-12 col-xxl-7">
-                                        <h6 class="text-muted font-semibold">Answered</h6>
+                                    <div class="col-md-12 col-lg-12 col-xl-12 col-xxl-12">
+                                        <h6 class="text-muted font-semibold">Answered Questions</h6>
                                         <h6 class="font-extrabold mb-0">$dashboard.answered</h6>
                                     </div>
                                 </div>
