--- a/backend/templates/auth-register.html
+++ b/backend/templates/auth-register.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Register - Mazer Admin Dashboard</title>
+    <title>Register - Survey</title>
     
     
     
@@ -53,6 +53,12 @@
                         <i class="bi bi-shield-lock"></i>
                     </div>
                 </div>
+                #if($error)
+                <div class="alert alert-danger alert-dismissible show fade">
+                    $error
+                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                </div>
+                #end
                 <button class="btn btn-primary btn-block btn-lg shadow-lg mt-5">Sign Up</button>
             </form>
             <div class="text-center mt-5 text-lg fs-4">
