--- a/backend/templates/my-account.html
+++ b/backend/templates/my-account.html
@@ -45,13 +45,13 @@
                                 </div>
                                 <div class="form-group">
                                     <label for="name" class="form-label">Name</label>
-                                    <input type="text" name="name" id="name" class="form-control"
+                                    <input type="text" name="name" id="name" class="form-control" autocomplete="off"
                                            placeholder="Your Name" value="$user.name">
                                 </div>
                                 <div class="form-group">
                                     <label for="avatar" class="form-label">Avatar</label>
                                     <input type="text" name="avatar" id="avatar"
-                                           class="form-control" placeholder="Avatar Url"
+                                           class="form-control" placeholder="Avatar Url" autocomplete="off"
                                            value="$user.avatar">
                                 </div>
                                 <div class="form-group">
