--- a/backend/templates/auth-register.html
+++ b/backend/templates/auth-register.html
@@ -30,7 +30,7 @@
 
             <form method="post" action="./register">
                 <div class="form-group position-relative has-icon-left mb-4">
-                    <input type="text" name="name" class="form-control form-control-xl" placeholder="Your Name">
+                    <input type="text" name="name" class="form-control form-control-xl" autocomplete="off" placeholder="Your Name">
                     <div class="form-control-icon">
                         <i class="bi bi-person-badge"></i>
                     </div>
