--- a/backend/templates/survey-create.html
+++ b/backend/templates/survey-create.html
@@ -56,7 +56,7 @@
                         <form action="/survey/create" method="post">
                             <div class="form-group">
                                 <label for="question">Question</label>
-                                <input type="text" class="form-control" id="question" name="question"
+                                <input type="text" class="form-control" id="question" name="question" autocomplete="off"
                                        placeholder="Type question here">
                             </div>
                             <div class="form-check form-switch">
@@ -64,23 +64,23 @@
                                 <input class="form-check-input" type="checkbox" id="single" name="single" checked>
                             </div>
                             <div class="form-group">
-                                <input type="text" class="form-control" id="answer1" name="answer1"
+                                <input type="text" class="form-control" id="answer1" name="answer1" autocomplete="off"
                                        placeholder="First answer (Required)">
                             </div>
                             <div class="form-group">
-                                <input type="text" class="form-control" id="answer2" name="answer2"
+                                <input type="text" class="form-control" id="answer2" name="answer2" autocomplete="off"
                                        placeholder="Second answer">
                             </div>
                             <div class="form-group">
-                                <input type="text" class="form-control" id="answer3" name="answer3"
+                                <input type="text" class="form-control" id="answer3" name="answer3" autocomplete="off"
                                        placeholder="Third answer">
                             </div>
                             <div class="form-group">
-                                <input type="text" class="form-control" id="answer4" name="answer4"
+                                <input type="text" class="form-control" id="answer4" name="answer4" autocomplete="off"
                                        placeholder="Fourth answer">
                             </div>
                             <div class="form-group">
-                                <input type="text" class="form-control" id="answer5" name="answer5"
+                                <input type="text" class="form-control" id="answer5" name="answer5" autocomplete="off"
                                        placeholder="Fifth answer">
                             </div>
                             <div class="form-group">
@@ -103,7 +103,7 @@
                         <form action="/survey/create" method="post">
                             <div class="form-group">
                                 <label for="name">Survey name</label>
-                                <input type="text" class="form-control" name="name" id="name"
+                                <input type="text" class="form-control" name="name" id="name" autocomplete="off"
                                        placeholder="Enter survey name">
                             </div>
                             <div class="form-group">
